# b2032-kepler-app

./: .gitignore  README.md  bug_fixes_summary.md  hello.py  pyproject.toml  requirements.txt
src/: export_map.py  main.py
src/api/: routes.py
src/database/: generate_duckdb_data.py  utils.py
