[project]
name = "b2032-kepler-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "pandas==1.5.3",
    "numpy==1.23.2",
    "keplergl-cli==0.3.3",
    "keplergl>=0.3.7",
    "ipykernel>=6.29.5",
    "duckdb>=1.3.1",
    "fastapi>=0.115.13",
    "uvicorn[standard]>=0.34.3",
    "python-multipart>=0.0.20",
    "itsdangerous==2.0.1",
    "geopandas==0.14.3",
    "dotenv>=0.9.9",
]
